--- a/index.html
+++ b/index.html
@@ -3,117 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>胡志明市之旅 - 第一天</title>
+    <title>越南六日遊</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #f8fafc; font-family: -apple-system, sans-serif; }
         .card { background: white; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
-        .gradient-hcmc { background: linear-gradient(135deg, #FF4B2B 0%, #FF416C 100%); } /* 胡志明市活力紅 */
-        .no-scrollbar::-webkit-scrollbar { display: none; }
+        .gradient-hcmc { background: linear-gradient(135deg, #FF4B2B 0%, #FF416C 100%); }
+        .tab-active { background: white; color: #FF4B2B; font-weight: bold; transform: scale(1.1); }
+        .hidden { display: none; }
     </style>
 </head>
 <body class="pb-10">
 
-    <div class="gradient-hcmc p-6 text-white pb-12">
-        <div class="flex justify-between items-center mb-4">
-            <div>
-                <h1 class="text-2xl font-bold">🇻🇳 越南．胡志明市</h1>
-                <p class="text-sm opacity-90">DAY 1 - 抵達南越</p>
-            </div>
-            <div class="flex gap-2 text-xl">
-                <button onclick="window.location.reload()" class="p-2 bg-white/20 rounded-lg">🏠</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="p-4 -mt-8">
-        <div class="card p-4 mb-4 border-l-4 border-yellow-400">
-            <h3 class="font-bold text-gray-700 mb-2 flex items-center">
-                <span class="mr-2">💰</span> 快速匯率對照 (概算)
-            </h3>
-            <div class="grid grid-cols-2 gap-2 text-sm">
-                <div class="bg-gray-50 p-2 rounded">10萬 VND ≈ <span class="text-red-500 font-bold">130 TWD</span></div>
-                <div class="bg-gray-50 p-2 rounded">20萬 VND ≈ <span class="text-red-500 font-bold">260 TWD</span></div>
-                <div class="bg-gray-50 p-2 rounded">50萬 VND ≈ <span class="text-red-500 font-bold">650 TWD</span></div>
-                <div class="bg-gray-50 p-2 rounded text-xs text-blue-600 flex items-center">去尾數三個零乘以 1.3</div>
-            </div>
-        </div>
-
-        <div class="card p-5 mb-4 gradient-hcmc text-white">
-            <div class="flex justify-between items-center mb-1">
-                <span class="text-sm opacity-80 font-bold">航班資訊</span>
-                <span class="bg-white/20 px-2 py-0.5 rounded text-xs">第一航廈 T1</span>
-            </div>
-            <div class="flex justify-between items-center">
-                <div class="text-center">
-                    <p class="text-3xl font-bold">TPE</p>
-                    <p class="text-xs opacity-70">桃園機場</p>
-                </div>
-                <div class="flex-1 px-4 text-center">
-                    <p class="text-xs mb-1">航班號碼 (填寫處)</p>
-                    <div class="border-t border-dashed border-white/50 relative">
-                        <span class="absolute -top-2 left-1/2 -translate-x-1/2 text-sm">✈️</span>
-                    </div>
-                </div>
-                <div class="text-center">
-                    <p class="text-3xl font-bold">SGN</p>
-                    <p class="text-xs opacity-70">新山一機場</p>
-                </div>
-            </div>
-        </div>
-
-        <h3 class="font-bold text-gray-800 mb-3 ml-1">今日行程</h3>
+    <div class="gradient-hcmc p-6 text-white pb-10 sticky top-0 z-50">
+        <h1 class="text-2xl font-bold text-center mb-4">🇻🇳 越南六日遊</h1>
         
-        <div class="space-y-4">
-            <div class="flex gap-4">
-                <div class="flex flex-col items-center">
-                    <div class="w-3 h-3 bg-red-500 rounded-full"></div>
-                    <div class="w-0.5 h-full bg-gray-200"></div>
-                </div>
-                <div class="card flex-1 p-4 mb-2">
-                    <p class="text-xs text-gray-400">Step 1</p>
-                    <h4 class="font-bold">新山一機場換匯 💵</h4>
-                    <p class="text-sm text-gray-600 mt-1">出關後左手邊有多間換匯櫃台。建議先換 50-100 美金或台幣夠付車資即可，市區金店匯率通常更好。</p>
-                </div>
-            </div>
+        <div class="flex gap-2 overflow-x-auto no-scrollbar justify-between">
+            <button onclick="showDay(1)" id="btn1" class="day-btn flex-1 py-2 px-3 rounded-xl text-center text-sm tab-active">1/17<br>D1</button>
+            <button onclick="showDay(2)" id="btn2" class="day-btn flex-1 py-2 px-3 rounded-xl text-center text-sm opacity-70">1/18<br>D2</button>
+            <button onclick="showDay(3)" id="btn3" class="day-btn flex-1 py-2 px-3 rounded-xl text-center text-sm opacity-70">1/19<br>D3</button>
+            <button onclick="showDay(4)" id="btn4" class="day-btn flex-1 py-2 px-3 rounded-xl text-center text-sm opacity-70">1/20<br>D4</button>
+            <button onclick="showDay(5)" id="btn5" class="day-btn flex-1 py-2 px-3 rounded-xl text-center text-sm opacity-70">1/21<br>D5</button>
+            <button onclick="showDay(6)" id="btn6" class="day-btn flex-1 py-2 px-3 rounded-xl text-center text-sm opacity-70">1/22<br>D6</button>
+        </div>
+    </div>
 
-            <div class="flex gap-4">
-                <div class="flex flex-col items-center">
-                    <div class="w-3 h-3 bg-green-500 rounded-full"></div>
-                    <div class="w-0.5 h-full bg-gray-200"></div>
+    <div class="p-4 mt-2">
+        
+        <div id="day1" class="day-content">
+            <div class="card p-5 mb-4 gradient-hcmc text-white">
+                <div class="flex justify-between items-center mb-1">
+                    <span class="text-sm font-bold">越捷航空 VJ843</span>
+                    <span class="text-[10px] bg-white/20 px-2 py-0.5 rounded">2TZFRV</span>
                 </div>
-                <div class="card flex-1 p-4 mb-2">
-                    <p class="text-xs text-gray-400">Step 2</p>
-                    <h4 class="font-bold">搭乘 Grab 前往市區 🚗</h4>
-                    <p class="text-sm text-gray-600 mt-1">打開 Grab App 叫車，過馬路到對面 Grab 指定上車點（通常是 Pillar 7-10 附近）。</p>
-                    <div class="mt-2 text-xs bg-green-50 text-green-700 p-2 rounded">
-                        💡 小心！不要搭理機場門口拉客的司機，只認準 App 上的車牌。
+                <div class="flex justify-between items-center py-4 text-center">
+                    <div class="flex-1 text-left">
+                        <p class="text-3xl font-bold">19:00</p>
+                        <p class="text-xs opacity-70">TPE 桃園 T1</p>
+                    </div>
+                    <div class="px-4">✈️</div>
+                    <div class="flex-1 text-right">
+                        <p class="text-3xl font-bold">21:25</p>
+                        <p class="text-xs opacity-70">SGN 新山一 T2</p>
                     </div>
                 </div>
             </div>
-
-            <div class="flex gap-4">
-                <div class="flex flex-col items-center">
-                    <div class="w-3 h-3 bg-blue-500 rounded-full"></div>
-                </div>
-                <div class="card flex-1 p-4">
-                    <p class="text-xs text-gray-400">Step 3</p>
-                    <h4 class="font-bold">飯店 Check-in / 放行李 🏨</h4>
-                    <p class="text-sm text-gray-600 mt-1">胡志明市區車程約 30-45 分鐘。</p>
-                </div>
+            <div class="card p-4 border-l-4 border-blue-500 mb-4">
+                <h4 class="font-bold">機場換匯 & Grab 🚗</h4>
+                <p class="text-sm text-gray-600">抵達 SGN 後換錢，叫 Grab 前往第一郡飯店。</p>
             </div>
         </div>
 
-        <div class="grid grid-cols-2 gap-3 mt-8">
-            <a href="https://translate.google.com/?sl=zh-CN&tl=vi&text=你好&op=translate" target="_blank" class="card p-4 text-center active:scale-95 transition-transform">
-                <span class="text-2xl mb-1 block">💬</span>
-                <span class="text-sm font-bold">中翻越</span>
-            </a>
-            <button onclick="alert('建議目的地：第一郡咖啡公寓 / 檳城市場')" class="card p-4 text-center active:scale-95 transition-transform">
-                <span class="text-2xl mb-1 block">📍</span>
-                <span class="text-sm font-bold">周邊景點</span>
-            </button>
+        <div id="day2" class="day-content hidden">
+            <div class="card p-5 mb-4 border-l-4 border-orange-500">
+                <div class="flex justify-between">
+                    <h4 class="font-bold text-lg text-orange-600">🚌 臥鋪巴士前往美奈</h4>
+                    <span class="text-sm font-bold bg-orange-100 px-2 py-1 rounded">座位 A2, B2</span>
+                </div>
+                <p class="text-sm mt-2 text-gray-700">集合時間：<b>08:30 AM</b></p>
+                <p class="text-xs text-gray-500">地點：121 Co Giang Street, District 1</p>
+            </div>
+            <div class="card p-5 mb-4 border-l-4 border-purple-500">
+                <h4 class="font-bold text-lg text-purple-600">🏨 Sunset Story Hotel</h4>
+                <p class="text-sm text-gray-600">Mũi Né, Phan Thiết</p>
+                <a href="https://maps.google.com/?q=Sunset+Story+Hotel+Mui+Ne" class="mt-3 block text-center bg-purple-100 text-purple-700 py-2 rounded-lg text-sm font-bold">打開飯店地圖</a>
+            </div>
         </div>
+
+        <div id="day3" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D3 行程</div>
+        <div id="day4" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D4 行程</div>
+        <div id="day5" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D5 行程</div>
+        <div id="day6" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D6 行程</div>
+
     </div>
+
+    <div class="fixed bottom-4 right-4 flex flex-col gap-2">
+        <a href="https://translate.google.com/?sl=zh-CN&tl=vi&op=translate" target="_blank" class="w-12 h-12 bg-white rounded-full shadow-lg flex items-center justify-center text-xl">💬</a>
+    </div>
+
+    <script>
+        function showDay(day) {
+            // 隱藏所有天數
+            document.querySelectorAll('.day-content').forEach(el => el.classList.add('hidden'));
+            // 顯示指定天數
+            document.getElementById('day' + day).classList.remove('hidden');
+            // 更新按鈕樣式
+            document.querySelectorAll('.day-btn').forEach(btn => {
+                btn.classList.remove('tab-active');
+                btn.classList.add('opacity-70');
+            });
+            document.getElementById('btn' + day).classList.add('tab-active');
+            document.getElementById('btn' + day).classList.remove('opacity-70');
+        }
+    </script>
 </body>
 </html>
