--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         body { background-color: #f8fafc; font-family: -apple-system, sans-serif; }
         .card { background: white; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         .gradient-hcmc { background: linear-gradient(135deg, #FF4B2B 0%, #FF416C 100%); }
-        .tab-active { background: white; color: #FF4B2B; font-weight: bold; transform: scale(1.1); }
-        .hidden { display: none; }
+        .tab-active { background: white !important; color: #FF4B2B !important; font-weight: bold; transform: scale(1.1); }
+        .day-content { display: none; }
+        .day-content.active { display: block; }
+        .no-scrollbar::-webkit-scrollbar { display: none; }
     </style>
 </head>
 <body class="pb-10">
@@ -30,7 +32,7 @@
 
     <div class="p-4 mt-2">
         
-        <div id="day1" class="day-content">
+        <div id="day1" class="day-content active">
             <div class="card p-5 mb-4 gradient-hcmc text-white">
                 <div class="flex justify-between items-center mb-1">
                     <span class="text-sm font-bold">越捷航空 VJ843</span>
@@ -50,50 +52,70 @@
             </div>
             <div class="card p-4 border-l-4 border-blue-500 mb-4">
                 <h4 class="font-bold">機場換匯 & Grab 🚗</h4>
-                <p class="text-sm text-gray-600">抵達 SGN 後換錢，叫 Grab 前往第一郡飯店。</p>
+                <p class="text-sm text-gray-600">抵達 SGN 後換錢，叫 Grab 前往第一郡市區。</p>
             </div>
         </div>
 
-        <div id="day2" class="day-content hidden">
+        <div id="day2" class="day-content">
             <div class="card p-5 mb-4 border-l-4 border-orange-500">
                 <div class="flex justify-between">
                     <h4 class="font-bold text-lg text-orange-600">🚌 臥鋪巴士前往美奈</h4>
                     <span class="text-sm font-bold bg-orange-100 px-2 py-1 rounded">座位 A2, B2</span>
                 </div>
                 <p class="text-sm mt-2 text-gray-700">集合時間：<b>08:30 AM</b></p>
-                <p class="text-xs text-gray-500">地點：121 Co Giang Street, District 1</p>
+                <div class="mt-4 p-3 bg-gray-50 rounded-lg text-sm">
+                    <p class="font-bold">📍 集合地點：</p>
+                    <p>121 Cô Giang, District 1, HCMC</p>
+                    <a href="https://www.google.com/maps/search/?api=1&query=121+Cô+Giang+Phường+Cô+Giang+Quận+1" target="_blank" class="mt-2 inline-block text-blue-600 font-bold underline text-xs">開啟地圖導航</a>
+                </div>
             </div>
             <div class="card p-5 mb-4 border-l-4 border-purple-500">
                 <h4 class="font-bold text-lg text-purple-600">🏨 Sunset Story Hotel</h4>
-                <p class="text-sm text-gray-600">Mũi Né, Phan Thiết</p>
-                <a href="https://maps.google.com/?q=Sunset+Story+Hotel+Mui+Ne" class="mt-3 block text-center bg-purple-100 text-purple-700 py-2 rounded-lg text-sm font-bold">打開飯店地圖</a>
+                <p class="text-xs text-gray-500 mt-1">170/15 Nguyễn Minh Châu, Mũi Né</p>
+                <a href="https://www.google.com/maps/search/?api=1&query=Sunset+Story+Hotel+Mui+Ne" target="_blank" class="mt-3 block text-center bg-purple-100 text-purple-700 py-2 rounded-lg text-sm font-bold">打開飯店地圖</a>
             </div>
         </div>
 
-        <div id="day3" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D3 行程</div>
-        <div id="day4" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D4 行程</div>
-        <div id="day5" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D5 行程</div>
-        <div id="day6" class="day-content hidden text-center py-20 text-gray-400 font-bold">待填入 D6 行程</div>
+        <div id="day3" class="day-content">
+            <div class="card p-5 mb-4 border-l-4 border-yellow-400">
+                <h4 class="font-bold text-lg text-yellow-600">🌅 日出沙漠吉普車之旅</h4>
+                <p class="text-sm text-gray-500">預計 04:30 AM 出發</p>
+                <div class="mt-3 space-y-1 text-sm text-gray-600">
+                    <p>• 白沙丘看日出</p>
+                    <p>• 紅沙丘、漁村、仙女溪</p>
+                </div>
+            </div>
+            <div class="card p-5 mb-4 border-l-4 border-blue-500">
+                <h4 class="font-bold text-lg text-blue-600">🏨 Centara Mirage Resort</h4>
+                <p class="text-xs text-gray-500 mt-1">Huỳnh Thúc Kháng, Phan Thiết</p>
+                <div class="mt-4 flex gap-2">
+                    <a href="https://www.google.com/maps/search/?api=1&query=Centara+Mirage+Resort+Mui+Ne" target="_blank" class="flex-1 text-center bg-blue-100 text-blue-700 py-2 rounded-lg text-sm font-bold">🗺️ 地圖導航</a>
+                    <a href="https://www.centarahotelsresorts.com/centara/cmv/" target="_blank" class="flex-1 text-center bg-gray-100 text-gray-700 py-2 rounded-lg text-sm font-bold">🌐 官網</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="day4" class="day-content text-center py-20 text-gray-400 font-bold">1/20 待填入 D4 行程</div>
+        <div id="day5" class="day-content text-center py-20 text-gray-400 font-bold">1/21 待填入 D5 行程</div>
+        <div id="day6" class="day-content text-center py-20 text-gray-400 font-bold">1/22 待填入 D6 行程</div>
 
     </div>
 
     <div class="fixed bottom-4 right-4 flex flex-col gap-2">
-        <a href="https://translate.google.com/?sl=zh-CN&tl=vi&op=translate" target="_blank" class="w-12 h-12 bg-white rounded-full shadow-lg flex items-center justify-center text-xl">💬</a>
+        <a href="https://translate.google.com/?sl=zh-CN&tl=vi&op=translate" target="_blank" class="w-12 h-12 bg-white rounded-full shadow-lg flex items-center justify-center text-xl border border-gray-100">💬</a>
     </div>
 
     <script>
-        function showDay(day) {
-            // 隱藏所有天數
-            document.querySelectorAll('.day-content').forEach(el => el.classList.add('hidden'));
-            // 顯示指定天數
-            document.getElementById('day' + day).classList.remove('hidden');
-            // 更新按鈕樣式
+        function showDay(dayNumber) {
+            document.querySelectorAll('.day-content').forEach(el => el.classList.remove('active'));
+            document.getElementById('day' + dayNumber).classList.add('active');
             document.querySelectorAll('.day-btn').forEach(btn => {
                 btn.classList.remove('tab-active');
                 btn.classList.add('opacity-70');
             });
-            document.getElementById('btn' + day).classList.add('tab-active');
-            document.getElementById('btn' + day).classList.remove('opacity-70');
+            document.getElementById('btn' + dayNumber).classList.add('tab-active');
+            document.getElementById('btn' + dayNumber).classList.remove('opacity-70');
+            window.scrollTo({ top: 0, behavior: 'smooth' });
         }
     </script>
 </body>
